--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "license": "MIT",
   "scripts": {
     "install-server": "yarn install --ignore-scripts",
-    "install-client": "cd client && yarn && cd ..",
+    "install-client": "cd client/web && yarn && cd ../..",
     "postinstall": "yarn install-client",
     "build-server": "yarn build-ts && yarn tslint",
-    "build": "cd client && yarn build && cd .. && yarn build-server",
+    "build": "cd client/web && yarn build && cd ../.. && yarn build-server",
     "start-client": "node start-client.js",
     "start": "yarn build-server && concurrently \"yarn serve\" \"yarn start-client\"",
     "serve": "node dist/server/server.js",
@@ -21,7 +21,7 @@
     "watch-node": "nodemon dist/server/server.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"yarn watch-ts\" \"yarn watch-node\"",
     "test": "yarn test-client",
-    "test-client": "cd client && yarn test",
+    "test-client": "cd client/web && yarn test",
     "watch-test": "yarn test -- --watchAll",
     "build-ts": "tsc",
     "watch-ts": "tsc -w",
