--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ results
 tmp
 
 # Build
-client/build
+client/web/build
 
 # Coverage reports
 coverage
@@ -24,7 +24,7 @@ coverage
 
 # Dependency directory
 node_modules
-client/node_modules
+client/web/node_modules
 bower_components
 
 # Editors
