--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     },
     "include": [
         "server/**/*",
-        "client/src/models/**/*"
+        "client/web/src/models/**/*"
     ]
 }
