--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,18 @@
   },
   "dependencies": {
     "expo": "^34.0.1",
+    "expo-font": "~6.0.1",
+    "native-base": "2.13.5",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
-    "react-native-web": "^0.11.4"
+    "react-native-web": "^0.11.4",
+    "react-router-native": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^16.8.23",
     "@types/react-native": "^0.57.65",
+    "@types/react-router-native": "^4.2.4",
     "babel-preset-expo": "^6.0.0",
     "typescript": "^3.4.5"
   },
