--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "license": "MIT",
   "scripts": {
     "install-server": "yarn install --ignore-scripts",
-    "install-client": "cd client/core && yarn && cd .. && yarn && expo install expo-font",
+    "install-client": "cd client/core && yarn && cd .. && yarn",
     "postinstall": "yarn install-client",
     "build-server": "yarn build-ts && yarn tslint",
     "build": "cd client/core && yarn build && cd ../.. && yarn build-server",
     "start-client": "node start-client.js",
-    "start-mobile": "node start-mobile.js",
+    "start-mobile": "cd client && expo install expo-font && node start-mobile.js",
     "start": "yarn build-server && concurrently \"yarn serve\" \"yarn start-client\" \"yarn start-mobile\"",
     "serve": "node dist/server/server.js",
     "debug": "yarn build-server && yarn watch-debug",
