start the Intl feature

--- a/client/core/package.json
+++ b/client/core/package.json
@@ -8,6 +8,7 @@
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-avatar-editor": "^11.0.7",
+    "react-intl": "^3.3.2",
     "react-redux": "6.0.1",
     "react-router": "4.3.0",
     "react-router-dom": "4.3.0",
@@ -26,6 +27,7 @@
     "@types/react-redux": "^7.1.2",
     "@types/react-avatar-editor": "^10.3.4",
     "@types/react-dom": "^16.9.0",
+    "@types/react-intl": "^3.0.0",
     "@types/react-router": "^5.0.3",
     "@types/react-router-dom": "^4.3.5",
     "@types/react-toastify": "^4.0.2",
