add basic intl framework for react-native project

--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "expo": "^34.0.1",
     "expo-font": "~6.0.1",
+    "intl": "^1.2.5",
     "native-base": "2.13.5",
     "react": "16.8.3",
     "react-dom": "16.8.3",
+    "react-intl": "^3.3.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-web": "^0.11.4",
     "react-redux": "6.0.1",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@types/react": "^16.8.23",
+    "@types/react-intl": "^3.0.0",
     "@types/react-native": "^0.57.65",
     "@types/react-redux": "^7.1.2",
     "@types/react-router-native": "^4.2.4",
