--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "expo": "^34.0.1",
     "expo-font": "~6.0.1",
+    "expo-localization": "~6.0.0",
     "intl": "^1.2.5",
     "native-base": "2.13.5",
     "react": "16.8.3",
