--- a/client/core/package.json
+++ b/client/core/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "es6-object-assign": "^1.1.0",
     "http-proxy-middleware": "^0.19.1",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.15",
     "react": "16.12.0",
     "react-dom": "16.12.0",
