--- a/client/core/package.json
+++ b/client/core/package.json
@@ -60,7 +60,9 @@
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "last 1 edge version",
+      "last 1 ie version"
     ]
   }
 }
