--- a/client/core/package.json
+++ b/client/core/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "fetch-mock": "^7.3.9",
     "redux-mock-store": "^1.5.3",
+    "@types/isomorphic-fetch": "^0.0.35",
     "@types/fetch-mock": "^7.3.1",
     "@types/jest": "^24.0.16",
     "@types/redux-mock-store": "^1.0.1"
