--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "cd client/core && yarn build && cd .. && yarn build && cd .. && yarn build-server",
     "start-client": "node start-client.js",
     "start-mobile": "cd client && expo install expo-font && cd .. && node start-mobile.js",
-    "start": "yarn build-server && concurrently \"yarn serve\" \"yarn start-client\" \"yarn start-mobile\"",
+    "start": "yarn build-server && concurrently \"yarn serve\" \"yarn start-client\"",
     "serve": "node dist/server/server.js",
     "debug": "yarn build-server && yarn watch-debug",
     "watch-node": "nodemon dist/server/server.js",
@@ -28,7 +28,7 @@
     "watch-ts": "tsc -w",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "serve-debug": "nodemon --inspect dist/server/server.js",
-    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"yarn watch-ts\" \"yarn serve-debug\" \"yarn start-client\" \"yarn start-mobile\""
+    "watch-debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"yarn watch-ts\" \"yarn serve-debug\" \"yarn start-client\""
   },
   "dependencies": {
     "@azure/storage-blob": "^12.0.1",
@@ -64,7 +64,7 @@
     "compression": "^1.7.4",
     "concurrently": "^5.0.0",
     "connect-ensure-login": "^0.1.1",
-    "connect-mongo": "^3.2.0",
+    "connect-mongo": "^4.4.1",
     "cors": "^2.8.5",
     "dot-prop": "^5.2.0",
     "dotenv": "^8.2.0",
@@ -80,6 +80,7 @@
     "nodemon": "^2.0.4",
     "oauth2orize": "^1.11.0",
     "passport": "^0.4.1",
+    "passport-custom": "^1.1.1",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
     "passport-local": "^1.0.0",
